--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
+    "react-id-generator": "^3.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
